--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 			</span>
 		</div>
 		<script type="text/javascript" charset="utf-8">
+		// 计算属性VS监听属性
 			var vm = new Vue({
 				el:'#example',
 				data:{
